@@ -8,6 +8,7 @@ DIST Image-ExifTool-9.70.tar.gz 3861823 SHA256 a59d48b586c38363c1fc16d8b954c5f9e
 DIST Image-ExifTool-9.72.tar.gz 3870373 SHA256 c6d5f0b44661ca6d041069d64804fd890d7310a73266202d08f557a704f81b7e SHA512 20454e1deecbc2e146563736e414244216a2b86e4760e9756a6e222942c70fa7f040ac44f278dbd656178ab38ad44d98d5351d08ce2ff3319abc0ab802dd696a WHIRLPOOL bd15eb55a67a619f87ef92d2cf16ce1a3c65dfad214b1419614ebb5c66be0f7bbd0ec09092fb34b6f29fad0a6090a71be95329c59f35df8685b17e91d2356f36
 DIST Image-ExifTool-9.74.tar.gz 3887419 SHA256 c01ec6b5bec478f2b963d12c588720805ac733b6e97dc065dd6a169c29f6496e SHA512 1d4bc2b5b3b4e73b4a968b7bfa59196e4e622cd2deaaa98d7b7d88ed165c193f10792e82a9b4c0d08094718a87b761a50ca80853aaf7b0c7fa053d3d80d83752 WHIRLPOOL 4e3107082d9f65a8a58a54e3684a5e6bfb1c28f538167db4003eb350c078091f44e19d10d1ba4617375ac08ab8c181f2df4f5fe5dd204d18066d0dc0e066f866
 DIST Image-ExifTool-9.75.tar.gz 3890399 SHA256 3bf00564552fac3dbf33c1cbff48461566998feff4a5eefef87f1220b4f788bb SHA512 0dbdc02fd92a1d07f3ca714cec03115a9d4a331353c4bd0b24fc54dabd9bbf20fa0b92cbfbb31b9af80667f85ea1401a62c375ca1d1511526b0281e56824b5d5 WHIRLPOOL 861c9f8933b50073c59191505638e7d53a203ba08890cce7eb96980d6e167b868d77213e0202a28b724ea9f4194ba5f66d2d2187f4255c048b2612b253b5e006
+DIST Image-ExifTool-9.76.tar.gz 3892850 SHA256 4fb1a53cdbd6959e69ec38e7bd5c2d87db3095c8f86226d3cb67dc50da7c0420 SHA512 e2aa237fc85935f3844b3e20a583a1fd2211354478058c5a252fa6795f3386e3a770e973ab608af69c5455898df1739959ac2cfd311b0c788325e8fba76f9963 WHIRLPOOL 6ca287c54b5d38b42114a52fe8a50ccd62c3d40881d5b66e4e69284b7981cf3508030ccfb873a8d0614ba823440a654a74b530e53d38d16076df435134c2e894
 EBUILD exiftool-9.12.ebuild 649 SHA256 d5720c4b9b896f347528d5a6f1c09ac22f2ed71313d132f935c87fc129fcaf05 SHA512 2a5a08fa832c71f4614fe9883404089854d4ba21a86b16b951deb8cff70742d71e8195b987725d4f1c4b28da418492af360d6864ab86863ef55c93010b25cd6e WHIRLPOOL 07539c0a29eba451b2e0dc80e83377bed9df61b76b771692b0115d21da27e68d2ae736a0dc782ad9a19a824151aac010fc0fe8b9380954ba8a452efab65bd31d
 EBUILD exiftool-9.68.ebuild 645 SHA256 e9b4768d7677b09e616ea152ea90593a315166aa925a99c688a0e17536b4dea4 SHA512 53c5f5f336bebff8caaa76b86c8839bfd6dfcf29755c0d5c972a824fccd3a799b9fe2ffe057809076ee1dd4a86d020d1021c0e14fc05a7f146e25fb9ec3abe51 WHIRLPOOL a1ca9a567cebf8c2ad7303981915ceb89ca789f28150bd41e3cf8821b4429d38ed6e13f4f2fcfeb89030e273dd98ee4dda1c0e59605fa49e6bc79861734fe248
 EBUILD exiftool-9.69.ebuild 645 SHA256 bf7e5bfdc0b9dc78263ff5fd60f5d83634e05ec2e2a3dbf0b6d38961ab9ea6e4 SHA512 83050171d6e1414fe955784aa1121c4dbdf712b6a04b823061676cb05308a66ce1bf7306b271c8a548076329a478a33ea439b7b190ff063059ab806539f1e966 WHIRLPOOL d3cae7fdaab304c52829a74ad084ab4846419f09aa11e70086ecbd69431c9c262a607b7326ae67536cb2255b51a86fc530b04542e5acd10c5c868a16ce87a45a
@@ -15,16 +16,17 @@ EBUILD exiftool-9.70.ebuild 645 SHA256 62f8124b0c0ba337a78c5089b8a4f1b0d79b6bee3
 EBUILD exiftool-9.72.ebuild 645 SHA256 880fbc771948c9263b3e322930cd9098f7a2307ed761073573068366100434a7 SHA512 4940b9f44c9ea63271bdcec5d772d69b89edd91ea416903c36672eb134a721feedbc06c72ef21a3756aaa9e4c77e1f8865c15204e97e8f4af9c266c0fa4ed1e6 WHIRLPOOL 86b91fa53d8f81819faa9a722d16b9671c62be0c083f5e52b1196eb5c58f39aa6a44290255fb525c420465dc00c115af78c873b89b8aee8c7927428f7eef73ce
 EBUILD exiftool-9.74.ebuild 645 SHA256 35f43c2a77ef4412496e92dbd3cf0fe8a629b5bcd08e6de22fa28f23457128ab SHA512 4d60ca78ac378e242ea7d685206697bfa19b6fffe04c6394ab669512dabaa30f316c27978ac6f6f48246dda23596de3274ba56f3f5b392160818acbddec57bd8 WHIRLPOOL 2d3219d380867fe302aac109d357ce8d883f8eaeb74f56aea3233ecdec3f2b9608ae4b3d60631270db2d162a39b1f31ab4d6a0436a2cbe5dbdd6b88c2026b7ed
 EBUILD exiftool-9.75.ebuild 645 SHA256 e167052425976474bfc715c25f5566ed311c3f87f206c46b02d1265eac952834 SHA512 194d31d61c2a995ec25fc8b7f6b106c5846bca1fa8d7e4d07a198ff55b9565d119c94c6b03afabe9ca887fb599a46149c8b7a033e81e91f0d3ae8df658d657c4 WHIRLPOOL bd59238b3b9be4965b26768627c8a91fb35c09e8b0bd599d771e8a411f967d9521bd9ba0b3e6292f30b49b1eb8e1baf842f609206405544e8003be9caa825c6d
-MISC ChangeLog 19094 SHA256 c2b3cd90685f440e2619b353e1f3d871b233b741a4c081cdaf2c2e5c2230392c SHA512 f92dec16289babd7c5a89c9f261399072f847811f30fc6b5ad4ebeffe7c76000e0bc5a0861d6b3e75af5cdf3837aa98127ef5676112cd58965daf290b25e69e7 WHIRLPOOL 064742e300be110a067fe7e6572b5dc0b0d0191bea5045a7fbbf1df5bca40b5da2611a6bc162786edcdca5744c9c629e925d58bdb116bf56846a2ca0e82df36f
+EBUILD exiftool-9.76.ebuild 645 SHA256 39f1db27d2287ca008804729abe932aaa9eeeb2655cb704e2973b1e77f6aeed8 SHA512 0b66907289ad1736c1a5fa6e117e225e7ef5908145cf866ac816718c5dc9a1736913c9ec64dd506d1acad2911aca9344d54cfe9a1a0142ec8d08b3c7c28b905c WHIRLPOOL b9d091000821c4063e2c3934e3ccfed7fc4103357b58a8235736fd2db44534bf208afb98c1ed3c17b119b6995ab1d71e302282afc422f16dbf3c229250fdb481
+MISC ChangeLog 19213 SHA256 e6a63a0b9af9324812a63809dcbe485330bfe9b86edb9878ca0049e4328eab44 SHA512 0499a87f3beccb29c9351becb15b049cff4db6c6e731d48c3b258e8c54b38ef2dd7cbb81527ddb04abdacfe9fab63e2a274170880db1876f7e254a4f98be98c3 WHIRLPOOL 46b45c980303bacd5f873927a1136a98825f3282a1120c79759bb8e163fe19999c29be62e9c41ad3443f819d341ab95279ddba415037a7bb8fe1147088633737
 MISC metadata.xml 9998 SHA256 f881ff06883a68ca0897c4f3b6aa784511026bfd821b9c618cc44704d1aa91cb SHA512 053c5d5c0e16ee59dc0c5456c40ff070f8199ea723880bd49b05d88e1aca419e7ff43c1c42f3ce4442807e9eb702b426b549a55f699a2218eed177f4f56ed012 WHIRLPOOL 1afe82eda0f8cd4846dd0b8f0294fb9fbbdd3eaa65b236c535bc6cae56cce2358473253ade683175c5127cb0a1bec1ed61951bb31b0b50e7c0cfb83dc6bda9f5
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJUWcUmAAoJEEqz6FtPBkyjyscIALAB9gDCGNbLWYeolZ2Q31J8
-wr/PKv697nUm075xBdRRlT9A09GQqs8k89uNNAANBARWDTcituata+fqGoAx8jLA
-+TxwnYlLxhEoZjm8Nw7CBX11rbPmNZqz1ULHt/+s3Mc8AC5kximAQ5ikSCwjpv6y
-EU769WoeBd9SrGbBb0DWFkDk75We89Ko3O/XWgu7i8mSyeqMtO6PXEZiPzCEXxdR
-GVOx3YU9fWWHu0lpGYwhCyXlctyAzGyLxXdZ0AssQUd74CqALhFx2is2K9YKkio4
-Om6nAGpgsOzHuGgQnyCgMEee5iZB1mtGLuLR2pD2uZzqEj/fSoyLC1y+3aNVwGA=
-=ALTG
+iQEcBAEBCAAGBQJUb+AYAAoJEEqz6FtPBkyjJ10H/3J2byGFeVwpLPypDS/IPS73
+6NuRaW9m5SXrd/GlhH26+AwnXbcFLxn7wwqiascZp13o/71pPEKzHdgbRTg0oRKi
+5a2v44jDTIkeBrYl3BRrC03E3GKQdREJHCA6zUUc7tgvhhtySQRxaG0i1FWqzO3F
+SZFKAx6/R9OQzC/TVZV6RJIAgkfWd+C20sx19Ka9zohbQOzhd+f+S4nVw+rB0/kG
+fNiZp5G5/DfJGN3XBB/G+FNQJYdP7cNHsFWzVIFoDBibBOQkEEwJJ8tXIEjF7bHR
+IAomIdRrdl8uhlnsPZczq2/iK9uzsUZwf/AMo4/UNgZw1/H79kKz7D96sq1Mt1U=
+=WDlg
 -----END PGP SIGNATURE-----
