@@ -1,0 +1,12 @@
+DEFINED_PHASES=compile configure install prepare test unpack
+DEPEND=dev-lang/perl:=[-build(-)]
+DESCRIPTION=Read and write meta information in image, audio and video files
+EAPI=5
+HOMEPAGE=http://www.sno.phy.queensu.ca/~phil/exiftool/ http://search.cpan.org/dist/Image-ExifTool/
+KEYWORDS=~amd64 ~ppc ~ppc64 ~x86 ~x64-macos
+LICENSE=|| ( Artistic GPL-1 GPL-2 GPL-3 )
+RDEPEND=dev-lang/perl:=[-build(-)]
+SLOT=0
+SRC_URI=http://www.sno.phy.queensu.ca/~phil/exiftool/Image-ExifTool-9.76.tar.gz
+_eclasses_=eutils	6faef4c127028ccbba3a11400d24ae34	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	perl-module	60a04a40f0e1520f274c3f7f55219ef2	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	unpacker	f300a7ca9131b1024a79762e8edd3c52
+_md5_=0867a1519a46b488da6545475488d678
